Using websocket react plugin and including client_uuid
